<resources>
    <string name="app_name">Foodiest</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_vegetarian">vegetarian</string>
    <string name="cake">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dammy_Name">Garlic Butter Shrimp</string>
    <string name="_1_2k">1.2k</string>
    <string name="Cooked">Cooked</string>
    <string name="txt_Dessert">Dessert</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_imageview">imageview</string>
    <string name="_7_2">7.2</string>
    <string name="txt_carbo">Carbo</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_description">Description</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_ingredients">Ingredients :</string>
    <string name="txt_intructions">Intructions</string>

</resources>