<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".model.activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_orange"
            app:expandedTitleTextAppearance="@style/expandedBarstyle"
            app:scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/txt_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300dp">

                <ImageView
                    android:id="@+id/ivDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_imageview"
                    android:foreground="@drawable/foreground_transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_shrimp"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintBaseline_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="@string/dammy_Name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/foreground_transparent"
                android:theme="?attr/actionBarTheme"
                app:layout_collapsMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCalories"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorYellow"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tvCaloriesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_calories"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCarbo"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="#84d2f4"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvCalories"
                app:layout_constraintStart_toEndOf="@+id/cvCalories">

                <TextView
                    android:id="@+id/tvCarbo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tvCarboLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_carbo"
                    android:textSize="@dimen/_12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProtein"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorRed"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvCarbo"
                app:layout_constraintStart_toEndOf="@+id/cvCarbo">

                <TextView
                    android:id="@+id/tvProtein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:id="@+id/tvProteinLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:text="Protein"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvCalories" />

            <TextView
                android:id="@+id/tvLabelRecipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_recipes"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailDescription" />

            <TextView
                android:id="@+id/tvLabelIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRecipes"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_ingredients"
                android:layout_marginTop="@dimen/_5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelIngredients"
                android:id="@+id/tvIngredients"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/txt_intructions"
                app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredients"
                android:id="@+id/tvLabelIntructions"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/txt_intructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelIntructions"
                android:id="@+id/tvInstructions"/>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
